Fix logo position on iOS

--- a/less/app/mainapp.less
+++ b/less/app/mainapp.less
@@ -35,6 +35,7 @@
 .longa-side-header {
   &:extend(.flex);
   &:extend(.horizontal);
+  height: 100%;
 }
 .longa-side-header-inner {
   &:extend(.flex);
